--- a/force-app/main/default/classes/AccController.cls
+++ b/force-app/main/default/classes/AccController.cls
@@ -3,7 +3,7 @@ public with Sharing class AccController {
     
     @AuraEnabled
     public static List<Account> getAccounts(){
-        
+        System.debug('Hi');
         List<Account> acc = [Select id,Name,Email__c,HeadOfficeCountry__c,Phone,Website from Account ];
         return acc;
     }
